# prjxylene

./: .gitattributes  .gitignore  .gitmodules  README.md  REVERSE_ENGINEERING_POLICY.md  env.sh  meson.build  meson_options.txt  requirements.txt
.github/workflows/: build-docs.yml
bindings/: meson.build
bindings/python/: meson.build  xylene.cc
contrib/: requirements.txt
contrib/pylib/prjxylene/: __init__.py  common.py  templates.py  vivado.py  xcm.py
db/part_indices/: artix_index.json  kintex_index.json  monolithic_index.json  spartan_index.json  versal_index.json  virtex_index.json  zynq_index.json
docs/: conf.py
docs/_static/: index.md
etc/: requirements.txt
etc/pylibs/: xylene_common.py  xylene_vivado.py
etc/pylibs/xylene/: common.py  templates.py  vivado.py
etc/scripts/: dump-parts.tcl  mkpartindex
libs/: meson.build  xylene_config.hh.in
libs/libxylene/: meson.build
libs/libxylene-bitstream/: meson.build
libs/libxylene-common/: meson.build  utility.hh
libs/libxylene-database/: meson.build
pylibs/prjxylene/: common.py  templates.py  vivado.py
scripts/: mkpartindex  xcm-util
subprojects/: .gitignore
tools/: meson.build
tools/bit/: main.cc  meson.build
tools/bram/: main.cc  meson.build
tools/pll/: main.cc  meson.build
tools/time/: main.cc  meson.build
tools/trans/: main.cc  meson.build
utilities/: mkpartindex  mkpkgmaps
