option(
	'bugreport_url',
	type: 'string',
	value: 'https://github.com/prjxylene/prjxylene/issues',
	description: 'URL for bug report submissions'
)

option(
	'python_bindings',
	type: 'boolean',
	value: true,
	description: 'Build the tools with python bindings'
)

option(
	'binding_install_dir',
	type: 'string',
	value: '',
	description: 'Directory to install python bindings in'
)

option(
	'fpga_familes',
	type: 'array',
	choices: [
		'artix', 'kintex', 'spartan', 'versal', 'virtex', 'zynq'
	],
	value: [
		'artix', 'kintex', 'spartan', 'versal', 'virtex', 'zynq'
	],
	description: 'Xilinx® FPGA Families to enable support for'
)

option(
	'xylene_tools',
	type: 'array',
	choices: [
		'bit', 'bram', 'pll', 'time', 'trans'
	],
	value: [
		'bit', 'bram', 'pll', 'time', 'trans'
	],
	description: 'prjxylene tools to build'
)
